# mysql-js

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  jones_deployments.js  package.json  sbom_generation.yaml
API-documentation/: Mynode  TableMapping
Adapter/api/: Db.js  Meta.js  Session.js  UserContext.js
Adapter/impl/common/: DBTableHandler.js
Adapter/impl/mysql/: MySQLConnectionPool.js
database-jones/: README.md  package-lock.json  package.json
database-jones/API-documentation/: Batch  Converter  Errors  Jones  Meta  Projection  Query  Session  SessionFactory  Stats  TableMapping  TableMetadata
database-jones/Adapter/: adapter_config.js
database-jones/Adapter/api/: Batch.js  Db.js  Meta.js  Projection.js  ProxyFactory.js  Query.js  Session.js  SessionFactory.js  TableMapping.js  Transaction.js  UserContext.js  jones.js  stats.js
database-jones/Adapter/common/: BitMask.js  DBTableHandler.js  DictionaryCall.js  FieldValueDefinedListener.js  IndexBounds.js  MySQLSerialize.js  MySQLTime.js  SQLBuilder.js  SQLTransactionHandler.js
database-jones/Converters/: JSONConverter.js  JSONSparseConverter.js  NumericConverter.js  SerializedObjectConverter.js
database-jones/SPI-documentation/: DBConnectionPool  DBOperation  DBServiceProvider  DBSession  DBTableHandler  DBTransactionHandler
database-jones/test/: JonesLintTests.js  JonesTestDriver.js  driver.js  utilities.js
database-jones/test/api/: DefaultImplementationTest.js  FieldMappingErrorTest.js  MynodeTest.js  PromisesTest.js  StatsTest.js  TableMappingErrorTest.js  TableMappingTest.js  TableNotFoundErrorTest.js
database-jones/test/autoincrement/: AutoPKInsertTest.js  SmokeTest.js  lib.js
database-jones/test/composition/: MultipleRelationshipProjectionTest.js  ProjectionErrorTest.js  ProjectionTest.js  QueryExtraProjectionTest.js  QueryKeyProjectionTest.js  QueryScanProjectionTest.js  RelationshipMappingTest.js  lib.js
database-jones/test/db/: InsertTest.js  SmokeTest.js
database-jones/test/freeform/: ClearSmokeTest.js  FreeformTest.js  (+6 more)
jones-mysql/: DefaultConnectionProperties.js  README.md  package.json
jones-mysql/impl/: MySQLConnection.js  MySQLConnectionPool.js  MySQLDictionary.js  MysqlErrToSQLStateMap.js  mysql_service_provider.js  path_config.js
jones-mysql/setup/: generate-SQLState_js.awk
jones-mysql/test/: driver.js  test_connection_defaults.js
jones-ndb/: CMakeLists.txt  DefaultConnectionProperties.js  README.md  binding.gyp  configure.js  loadme.js  package.json  wscript
jones-ndb/Converters/: NdbDateConverter.js  NdbDatetimeConverter.js  NdbTimeConverter.js
jones-ndb/Documentation/: ndb_properties.js
jones-ndb/impl/: wscript
jones-ndb/impl/include/common/: AsyncMethodCall.h  ConcurrentFlag.h  JsConverter.h  JsWrapper.h  NativeCFunctionCall.h  NativeMethodCall.h  SharedList.h  adapter_global.h  async_common.h  js_wrapper_macros.h
jones-ndb/impl/include/ndb/: AbstractOperation.h  AsyncNdbContext.h  BatchImpl.h  BlobHandler.h  ColumnHandler.h  ColumnProxy.h  DBOperationSet.h  DBTransactionContext.h  EncoderCharset.h  KeyOperation.h  NdbJsConverters.h  NdbRecordObject.h  NdbTypeEncoders.h  NdbWrapperErrors.h  NdbWrappers.h  QueryOperation.h  Record.h  ScanOperation.h  SessionImpl.h  TransactionImpl.h
jones-ndb/impl/include/ndb/ndb_util/: NdbQueryBuilder.hpp  NdbQueryOperation.hpp
jones-ndb/impl/ndb/: MySQL_serialize.js  NdbAutoIncrement.js  NdbConnection.js  NdbConnectionPool.js  NdbMetadataManager.js  NdbOperation.js  NdbProjection.js  NdbScanFilter.js  NdbSession.js  NdbTransactionHandler.js  ndb_service_provider.js  path_config.js
jones-ndb/impl/src/common/: async_common.cpp  unified_debug.cpp
jones-ndb/impl/src/ndb/: AsyncNdbContext.cpp  AsyncNdbContext_wrapper.cpp  BatchImpl.cpp  BatchImpl_wrapper.cpp  BlobHandler.cpp  ColumnHandler.cpp  ColumnProxy.cpp  DBDictionaryImpl.cpp  DBOperationHelper.cpp  DBOperationSet_wrapper.cpp  DBTransactionContext.cpp  EncoderCharset.cpp  IndexBoundHelper.cpp  KeyOperation.cpp  NdbError_wrapper.cpp  NdbInterpretedCode_wrapper.cpp  NdbRecordObject.cpp  NdbScanFilter_wrapper.cpp  NdbTypeEncoders.cpp  Ndb_cluster_connection_wrapper.cpp  Ndb_init_wrapper.cpp  Ndb_util_wrapper.cpp  Ndb_wrapper.cpp  QueryOperation.cpp  QueryOperation_wrapper.cpp  Record.cpp  Record_wrapper.cpp  ScanOperation.cpp  ScanOperation_wrapper.cpp  SessionImpl.cpp  SessionImpl_wrapper.cpp  TransactionImpl.cpp  TransactionImpl_wrapper.cpp  ValueObject.cpp  mysqlclient_wrapper.cpp  node_module.cpp
jones-ndb/impl/test/: api-mapper.cc  binding.gyp  debug_dlopen.cpp  loadtest.js  maptest.js  outer-mapper.cc
jones-ndb/standalone/: CMakeLists.txt
jones-ndb/test/: disabled-tests.js  driver.js  test_connection_defaults.js
jones-ndb/test/lint/: LintTest.js
jones-ndb/test/ndb-issues/: 2013-04-27Test.js  IntAfterBlobTest.js  create.sql  drop.sql
jones-promises/: README.md  package.json
jones-promises/lib/: Promise.js
jones-test/: README.md  jones-test.js  package.json
jones-test/API-Documentation/: Driver.md  Test.md
jones-test/lib/: CommandLine.js  DocsTest.js  Driver.js  LintTest.js  Listener.js  Result.js  Suite.js  Test.js
jones-test/selftest/: driver.js
loader/: dbloader.js
loader/lib/: BadRecordLogger.js  Controller.js  DataSource.js  DbWriter.js  LoaderJob.js  LoaderModule.js  Parser.js  RandomData.js  Scanner.js  control_file.js
perftest/: create.sql  drop.sql  jscrund.js  jscrund_config-dist.js  jscrund_dbspi.js  jscrund_mysqljs.js  jscrund_null.js  jscrund_sql.js  run_std_bench.sh
samples/: find.js  insert.js
samples/DBServiceProvider/: DefaultConnectionProperties.js  README.md  package.json
samples/loader/: dbloader.js
samples/tweet/: README  README.md  create_tweet_tables.sql  demo_cli_get.sh  demo_cli_populate.sh  demo_http_delete.sh  demo_http_get.sh  demo_populate_data.sh  find.js  insert.js  join.js  scan.js  tweet.js  tweet.properties.js
shell/: jrepl.js  jshell
test/multidb/: ConnectTest.js
unified_debug/: README.md  package.json  unified_debug.js
unified_debug/example-c/: unified_debug.cpp  unified_debug.h
(+119 files in other folders)
